# fnox-add

./: Cargo.toml  LICENSE  Makefile  README.md  release.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs
